[gd_scene load_steps=11 format=3 uid="uid://baljr1c4vpbe8"]

[ext_resource type="Script" path="res://GameController.gd" id="1_5o2de"]
[ext_resource type="Script" path="res://scenes/mainScene.gd" id="1_6ri7u"]
[ext_resource type="Script" path="res://scenes/MainCamera.gd" id="3_r5ulx"]
[ext_resource type="Script" path="res://scenes/GameField.gd" id="4_4m6m6"]
[ext_resource type="Shader" path="res://shaders/fog.gdshader" id="5_6e7bt"]
[ext_resource type="Script" path="res://FPS.gd" id="6_euirt"]
[ext_resource type="Script" path="res://scenes/RayCast.gd" id="7_o2t6b"]

[sub_resource type="Environment" id="Environment_c45s4"]
background_mode = 1
background_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
ambient_light_source = 2
ambient_light_color = Color(0.435294, 0.592157, 0.701961, 1)
ssao_radius = 15.76
ssao_intensity = 16.0
ssao_ao_channel_affect = 0.6
fog_light_color = Color(0.0627451, 0.109804, 0.14902, 1)
fog_light_energy = 1.22
fog_density = 0.0
fog_sky_affect = 0.5
fog_height_density = 2.0105
adjustment_brightness = 1.59

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0hor6"]
render_priority = -128
shader = ExtResource("5_6e7bt")
shader_parameter/color1 = Color(0.0392157, 0.0862745, 0.129412, 1)
shader_parameter/color2 = Color(0.109804, 0.192157, 0.247059, 1)

[sub_resource type="QuadMesh" id="QuadMesh_q4qj6"]
material = SubResource("ShaderMaterial_0hor6")
size = Vector2(2, 2)

[node name="Node3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.074028, -0.0660019, 0.0475349)
script = ExtResource("1_6ri7u")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c45s4")

[node name="TileLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 575.0
offset_top = 582.0
offset_right = 590.0
offset_bottom = 605.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.7884, -0.506226, 0.349514, -0.518498, -0.241093, 0.820386, -0.331036, -0.828015, -0.452555, 0, 17.1043, 0)
light_energy = 2.939
shadow_enabled = true

[node name="GameField" type="Node3D" parent="."]
unique_name_in_owner = true
editor_description = "Spielfeld"
script = ExtResource("4_4m6m6")

[node name="GameController" type="Node" parent="."]
script = ExtResource("1_5o2de")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.707107, -0.664463, 0.241845, 0, 0.34202, 0.939693, -0.707107, -0.664463, 0.241845, 3, 7, 3)
current = true
fov = 60.0
script = ExtResource("3_r5ulx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, 0, 1, 0, 0, -0.338289)
mesh = SubResource("QuadMesh_q4qj6")

[node name="TileRotLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 552.0
offset_top = 582.0
offset_right = 567.0
offset_bottom = 605.0

[node name="FPS" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 13.0
offset_top = 16.0
offset_right = 28.0
offset_bottom = 39.0
script = ExtResource("6_euirt")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.60494, 1.75415)
target_position = Vector3(0, 0, 0)
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("7_o2t6b")

[connection signal="actualClick" from="Camera3D" to="RayCast3D" method="_on_camera_3d_actual_click"]
[connection signal="previewTileClicked" from="Camera3D" to="GameField" method="_on_camera_3d_preview_tile_clicked"]
